--- a/css/foundation.css
+++ b/css/foundation.css
@@ -43,7 +43,7 @@ body {
   color: #222222;
   padding: 0;
   margin: 0;
-  font-family: "Garamond";
+  font-family: "Helvetica";
   font-weight: normal;
   font-style: normal;
   line-height: 150%;
